# SkyrimOutfitSystemSE

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  RCa23844  README.md  SkyrimOutfitSystem.code-workspace  SkyrimOutfitSystemSE.sln  SkyrimOutfitSystemSE.vcxproj  appveyorscript  replace.js  skyrimse.ppj  vcpkg-configuration.json  vcpkg.json
dependencies/: CMakeLists.txt
dependencies/AddressLibrary/: PLACE_ADDRESS_LIBRARY_HERE.txt
dependencies/skse64/: skse64_readme.txt  skse64_whatsnew.txt
dependencies/skse64/Data/Scripts/: Location.pex  activemagiceffect.pex  actor.pex  actorbase.pex  actorvalueinfo.pex  alias.pex  ammo.pex  apparatus.pex  armor.pex  armoraddon.pex  art.pex  book.pex  camera.pex  cell.pex  colorcomponent.pex  colorform.pex  combatstyle.pex  constructibleobject.pex  defaultobjectmanager.pex  enchantment.pex  equipslot.pex  faction.pex  flora.pex  form.pex  formlist.pex  formtype.pex  game.pex  gamedata.pex  headpart.pex  ingredient.pex  input.pex  keyword.pex  leveledactor.pex  leveleditem.pex  leveledspell.pex  magiceffect.pex  math.pex  modevent.pex  netimmerse.pex  objectreference.pex  (+22 more)
dependencies/skse64/Data/Scripts/Source/: ActiveMagicEffect.psc  Actor.psc  ActorBase.psc  Alias.psc  Ammo.psc  Apparatus.psc  Armor.psc  Book.psc  Cell.psc  ConstructibleObject.psc  Enchantment.psc  Faction.psc  Flora.psc  Form.psc  FormList.psc  Game.psc  Ingredient.psc  Keyword.psc  LeveledActor.psc  LeveledItem.psc  LeveledSpell.psc  Location.psc  MagicEffect.psc  Math.psc  ObjectReference.psc  Outfit.psc  Perk.psc  Potion.psc  Quest.psc  Race.psc  SKSE.psc  Scroll.psc  Shout.psc  SoulGem.psc  Sound.psc  Spell.psc  TextureSet.psc  Utility.psc  Weapon.psc  Weather.psc
dependencies/skse64/src/common/: CMakeLists.txt  common_vc14.vcxproj
dependencies/skse64/src/skse64/: skse64.sln
dependencies/skse64/src/skse64/skse64/: CMakeLists.txt  PapyrusReferenceAlias.cpp  skse64.vcxproj
dependencies/skse64/src/skse64/skse64_common/: CMakeLists.txt  skse64_common.vcxproj  skse_version.h
dependencies/skse64/src/skse64/skse64_loader_common/: IdentifyEXE.cpp
dependencies/skyui_sdk/: PUT_SKYUI_5_1_SDK_HERE.txt
dependencies/skyui_sdk/Examples/MCM/: ConfigMenuTemplate.psc  ExampleConfigMenu.psc
dependencies/ui_extensions/: EXTRACT_UIEXTENSIONS_BSA_HERE.txt
include/: ArmorAddonOverrideService.h  OutfitSystem.h  PlayerSkinning.h  SKSE_PCH.h  SOS_PCH.h  Utility.h  version.h
include/RE/: REAugments.h
include/hooking/: Hooks.hpp  Patches.hpp
mod_files/: SkyrimOutfitSystem.esp
mod_files/SKSE/Plugins/: SkyrimOutfitSystemSE.ini
mod_files/fomod/: ModuleConfig.xml  info.xml
mod_files/interface/translations/: skyrimoutfitsystem_english.txt  skyrimoutfitsystem_japanese.txt
src/: ArmorAddonOverrideService.cpp  OutfitSystem.cpp  PlayerSkinning.cpp  RustSymbols.cpp  Utility.cpp  main.cpp  main2.cpp
src/RE/: REAugments.cpp
src/addrlib/: main.cpp
src/addrlib/skse_swap/: Relocation.h  Utilities.h  lookup.cpp  lookup.h
src/cobb/: utf8naturalsort.cpp  utf8string.cpp
src/cpp/: OutfitSystem.cpp  RustSymbols.cpp  Utility.cpp  main.cpp  version.rc
src/cpp/RE/: REAugments.cpp
src/cpp/hooking/: Hooks_AE.cpp  Patches.cpp
src/cpp/include/: OutfitSystem.h  PlayerSkinning.h  SOS_PCH.h  version.h
src/cpp/include/RE/: REAugments.h
src/cpp/include/hooking/: Hooks.hpp  Patches.hpp
src/hooking/: Hooks_AE.cpp  Hooks_PRE_AE.cpp  Patches.cpp  PlayerSkinning_AE.cpp  PlayerSkinning_PRE_AE.cpp
src/papyrus/: skyoutsysautoswitchtrigger.psc  skyoutsysmcm.psc  skyoutsysplayercombatdetection.psc  skyoutsysquicksloteffect.psc  skyoutsysquickslotmanager.psc  skyrimoutfitsystemnativefuncs.psc
src/protos/: example.proto  outfit.proto
src/rust/: Cargo.toml  dummy.cpp
src/rust/commonlibsse/: Cargo.toml  build.rs
src/rust/commonlibsse/include/: customize.h  customize.hpp
src/rust/commonlibsse/src/: lib.rs
src/rust/protos/: Cargo.toml  build.rs
src/rust/protos/src/: outfit.proto
src/rust/sos/: Cargo.toml  build.rs
src/rust/sos/include/: customize.h
src/rust/sos/src/: helpers.rs  interface.rs  lib.rs  logging.rs  outfit.rs  panicking.rs  persistence.rs  settings.rs  strings.rs
src/sos-rs/: Cargo.toml  build.rs
src/sos-rs/src/: lib.rs  outfit.rs
